--- a/.github/workflows/integration-flows.yaml
+++ b/.github/workflows/integration-flows.yaml
@@ -52,8 +52,9 @@ jobs:
                         cd ../../
 
                         # run tests if applicable
+                        integration="${integration%/}"
                         pushd ../tests/integration-templates
-                        bash generate-and-run-tests.bash $dir
+                        bash generate-and-run-tests.bash $integration
                         popd
                     fi
                   done
