[nan-1643] use correct variable

--- a/.github/workflows/integration-flows.yaml
+++ b/.github/workflows/integration-flows.yaml
@@ -52,7 +52,7 @@ jobs:
                         cd ../../
 
                         # run tests if applicable
-                        integration="${integration%/}"
+                        integration="${dir%/}"
                         pushd ../tests/integration-templates
                         bash generate-and-run-tests.bash $integration
                         popd
