[nan-1643] update nav

--- a/.github/workflows/integration-flows.yaml
+++ b/.github/workflows/integration-flows.yaml
@@ -52,7 +52,7 @@ jobs:
 
                         # run tests if applicable
                         integration="${dir%/}"
-                        pushd ../../tests/integration-templates
+                        pushd ../../../tests/integration-templates
                         bash generate-and-run-tests.bash $integration
                         popd
 
