[nan-1632] fix bad null

--- a/integration-templates/cal-com-v2/nango.yaml
+++ b/integration-templates/cal-com-v2/nango.yaml
@@ -55,7 +55,7 @@ models:
         scheduleId: number | null
         price: number
         currency: string
-        slotInterval: number | null,
+        slotInterval: number | null
         successRedirectUrl: string | null
         isInstantEvent: boolean
         aiPhoneCallConfig: string | null
