[nan-1543] update flows

--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -630,7 +630,7 @@ integrations:
                 schedulingType: null | string
                 userId: number
                 metadata:
-                    ___string: any
+                    __string: any
                 description: string | null
                 hidden: boolean
                 slug: string
