feat(integrations): add support for manatal

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1901,6 +1901,24 @@ mailchimp:
         response_type: code
     docs: https://docs.nango.dev/integrations/all/mailchimp
 #Untested configuration. Please reach out if you have a test account that we can use to test it.
+manatal:
+    auth_mode: API_KEY
+    categories:
+        - crm
+        - hr
+    proxy:
+        base_url: https://api.manatal.com/open/v3
+        verification:
+            method: GET
+            endpoint: /users
+        headers:
+            Authorization: Token ${apiKey}
+        paginate:
+            type: link
+            limit_name_in_request: page_size
+            link_path_in_response_body: next
+            response_path: results
+    docs: https://docs.nango.dev/integrations/all/manatal
 marketo:
     auth_mode: OAUTH2_CC
     proxy:
