--- a/.github/workflows/deploy-scripts-internally.yaml
+++ b/.github/workflows/deploy-scripts-internally.yaml
@@ -25,22 +25,22 @@ jobs:
               run: |
                   dirs=$(find integration-templates -maxdepth 1 -type d | tail -n +2)
                   for dir in $dirs; do
-                    integration=$(basename $dir)
+                    integration=$(basename "$dir")
 
-                    mkdir -p /tmp/nango-temp/nango-integrations/$integration
+                    mkdir -p "/tmp/nango-temp/nango-integrations/$integration"
 
-                    cp $dir/nango.yaml /tmp/nango-temp/nango-integrations/
-                    cp -r $dir/* /tmp/nango-temp/nango-integrations/$integration/
+                    cp "$dir/nango.yaml" /tmp/nango-temp/nango-integrations/
+                    cp -r "$dir"/* "/tmp/nango-temp/nango-integrations/$integration/"
 
                     cd /tmp/nango-temp/nango-integrations
                     npm install zod soap botbuilder
 
-                    response=$(nango admin:deploy-internal template-$integration)
+                    response=$(nango admin:deploy-internal template-"$integration")
 
                     echo "$response" | jq '.error.code' | grep -q "unknown_provider_config"
                     if [ $? -eq 0 ]; then
-                      echo "Error: Unknown provider config for $integration"
-                      return true
+                      echo "Warning: Unknown provider config for $integration"
+                      continue
                     fi
 
                     cd -
